--- a/client/packages/openblocks/index.html
+++ b/client/packages/openblocks/index.html
@@ -57,6 +57,7 @@
     <script>
       window.global = window;
     </script>
+    <%- proxyScript %>
   </head>
   <body>
     <div id="not-supported-browser"></div>
