--- a/client/packages/openblocks/index.html
+++ b/client/packages/openblocks/index.html
@@ -54,10 +54,10 @@
         align-items: center;
       }
     </style>
+    <%- proxyScript %>
     <script>
       window.global = window;
     </script>
-    <%- proxyScript %>
   </head>
   <body>
     <div id="not-supported-browser"></div>
@@ -95,7 +95,7 @@
     </div>
 
     <div id="root"></div>
-    <script type="module" src="/src/index.ts"></script>
+    <script type="module" defer src="/src/index.ts"></script>
     <%- browserCheckScript %>
   </body>
 </html>
