Fix Custom Components and Add SDK to build

--- a/client/packages/openblocks-sdk/index.html
+++ b/client/packages/openblocks-sdk/index.html
@@ -20,6 +20,7 @@
         margin-right: 10px;
       }
     </style>
+    <script type="module" crossorigin src="/js/proxy.js"></script>
   </head>
   <body>
     <h1 class="demo-title">Use in vanilla app</h1>
