Fix Embedded Page

--- a/client/packages/openblocks/index.html
+++ b/client/packages/openblocks/index.html
@@ -12,6 +12,7 @@
       content="A developer-friendly open-source low code platform to build internal apps within minutes."
     />
     <meta name="theme-color" content="#000000" />
+    <script type="module" crossorigin src="/js/proxy.js"></script>
     <style>
       html,
       body {
